# py-func-timeout

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_func_timeout/: __init__.py
tests/: test_import.py
