[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-func-timeout"
version = "0.1.3"
description = "Add a timeout to any function call — sync or async"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["timeout", "function", "async", "decorator", "threading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-func-timeout"
Repository = "https://github.com/philiprehberger/py-func-timeout"
Issues = "https://github.com/philiprehberger/py-func-timeout/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_func_timeout"]
